--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+# Python version
+python-version==3.12.3
+
+# Web framework
 Flask==2.3.3
-Pillow==10.0.1
+Werkzeug==2.3.7
+
+# Image processing
+Pillow==10.4.0
+opencv-python==4.8.1.78
+
+# Machine learning and numerical computations
 numpy==1.24.3
 scikit-learn==1.3.0
-Werkzeug==2.3.7
-opencv-python==4.8.1.78
